# cs4730-collaborative-text-editing

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  EVALUATION.md  FINAL_REPORT.md  Makefile  README.md
include/: cursor_sync.h  editor_ui.h  logger.h  net_utils.h  peer_manager.h  peer_socket.h  pipeline.h  rga.h  serializer.h  state_sync.h
scripts/: analyze_convergence.py  analyze_latency.py  analyze_results.py  analyze_scalability.py  automated_typing.sh  cluster.conf  collect_results.sh  gen_convergence_script.py  gen_inserts.py  latency_eval.sh  latency_sender.txt  receiver_script.txt  run_eval.sh
src/: cursor_sync.cpp  editor_ui.cpp  logger.cpp  p2p-editor.cpp  peer_manager.cpp  peer_socket.cpp  pipeline.cpp  rga.cpp  serializer.cpp  state_sync.cpp
tests/: test_crash_recovery.cpp  test_main.cpp  test_peer_manager.cpp  test_peer_socket.cpp  test_pipeline.cpp  test_rga.cpp  test_serializer.cpp  test_state_sync.cpp
